# git_hooks

./: .pre-commit-hooks.yaml  README.md  comment_checker_v2.pl  remove_cpp_comments.py  setup.cfg  setup.py
hooks/: check_release_files.py  remove_cpp_comments.py
