[metadata]
name = pre_commit_hooks
version = 1.0.0
description = My custom pre-commit.

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    remove_cpp_comments = remove_cpp_comments:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
